[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "textshot"
version = "0.1.1"
authors = [{ name = "Ian Zhao", email = "ian.z05@outlook.com" }]
description = "Python tool for grabbing text via screenshot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/ianzhao05/textshot"
"Bug Tracker" = "https://github.com/ianzhao05/textshot/issues/"

[project.scripts]
textshot = "textshot.textshot:main"

[project.gui-scripts]
textshotw = "textshot.textshot:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
